90-MixConfigs/Minecraft/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: default
  labels:
    app: minecraft
    world: "1"
spec:
  ports:
    - port: 25565
      name: tcp-minecraft
      protocol: TCP
#      nodePort: 30000
  selector:
    app: minecraft
    world: "1"
#  type: NodePort
