90-MixConfigs/Minecraft/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minecraft-gateway
  namespace: default
spec:
  selector:
    istio: games
  servers:
    - port:
        number: 25565
        name: tcp-1
        protocol: TCP
      hosts:
        - "*"
