90-MixConfigs/Minecraft/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minecraft-1
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - minecraft-gateway
  tcp:
    - match:
        - port: 25565
      route:
        - destination:
            host: minecraft.default.svc.cluster.local
            port:
              number: 25565
